--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 .column {
-  width: 33%;
-  float: left;
+  width: 60%;
 }
 body {
   text-align: center;
@@ -8,8 +7,21 @@ body {
 img {
   width: 250px;
   height: auto;
+  float: left;
 }
 .important {
   font-style: italic;
   color: blue;
+}
+.name {
+  font-weight: bold;
+  font-family: fantasy;
+}
+h1 {
+  font-family: fantasy;
+  color: blue;
+  font-size: 45px;
+}
+h2 {
+  color: purple;
 }
